@startuml
namespace strategy {
    class BubbleSort << (S,Aquamarine) >> {
        + Sort(values []RankItem) 

    }
    class QuickSort << (S,Aquamarine) >> {
        + Sort(values []RankItem) 

    }
    class RankItem << (S,Aquamarine) >> {
        + Name string
        + Score int64

    }
    class RankList << (S,Aquamarine) >> {
        - capacity int
        - items []RankItem
        - sorter Sorter

        + AddItem(name string, score int64) 
        + Items() []RankItem

    }
    interface Sorter  {
        + Sort(values []RankItem) 

    }
}

"strategy.Sorter" <|-- "strategy.BubbleSort"
"strategy.Sorter" <|-- "strategy.QuickSort"
"strategy.RankList" "1" --> "m" "strategy.RankItem"
"strategy.RankList" --> "strategy.Sorter"

@enduml
